Fixing the wording

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 						<!-- Four -->
 							<section id="four" class="wrapper style3">
 								<div class="inner">
-									<h2 class="major">Supported by</h2>
+									<h2 class="major">In cooperation with</h2>
 
 									<div class="box alt">
 										<div class="row gtr-uniform">
