Updating the organizers

--- a/index.html
+++ b/index.html
@@ -94,8 +94,91 @@
 								</div>
 							</section>
 
+
+					<!-- Four -->
+					<section id="four" class="wrapper style3">
+						<div class="inner">
+							<h2 class="major">Highlights</h2>
+							<p> This workshop features the talks of 8 high-profile invited speakers of diverse academic and industrial backgrounds, a call for short papers and a trajectory prediction challenge.</p>
+							<section class="features">
+								<article>
+									<h3 class="major">Program and participation</h3>
+									<p>Preliminary program of the full-day workshop is available. Registration and online participation details will be announced soon.</p>
+									<a href="#" class="special">Learn more</a>
+								</article>
+								<article>
+									<h3 class="major">Call for papers</h3>
+									<p>We encourage researchers submit their novel material in short (up to 4 pages) papers to be presented as posters.</p>
+									<a href="#" class="special">Learn more</a>
+								</article>
+								<article>
+									<h3 class="major">Prediction challenge</h3>
+									<p>The challnge details will be announced soon.</p>
+									<a href="#" class="special">Learn more</a>
+								</article>
+								<article>
+									<h3 class="major">YouTube channel</h3>
+									<p>Recordings of the past LHMP events are available at our YouTube channel.</p>
+									<a href="#" class="special">Learn more</a>
+								</article>
+							</section>
+							<ul class="actions">
+								<li><a href="past-events.html" class="button">Past events</a></li>
+							</ul>
+						</div>
+					</section>
+
+					</section>	
+
 						<!-- Four -->
-							<section id="four" class="wrapper style3">
+							<section id="four" class="wrapper alt style4">
+								<div class="inner">
+									<h2 class="major">Organizers</h2>
+									<div class="box alt">
+										<div class="row gtr-uniform">
+											<div class="col-2">
+												<span class="image fit"><img src="images/Organizers/luigi-palmieri.jpg"
+														alt="" /></span>
+												<p><a href="https://palmieri.github.io/"><strong>Luigi Palmieri</strong>,</br> Robert Bosch
+														GmbH</a></p>
+											</div>
+											<div class="col-2">
+												<span class="image fit"><img src="images/Organizers/Andrey_Rudenko-2.jpeg" alt="" /></span>
+												<p> <a href="https://rudenkoandrey.github.io"><strong>Andrey Rudenko</strong>,</br>
+														Robert Bosch GmbH</a></p>
+											</div>
+											<div class="col-2">
+												<span class="image fit"><img src="images/Organizers/boris_ivanovic.jpg" alt="" /></span>
+												<p> <a href="https://www.borisivanovic.com"><strong>Boris
+															Ivanovic</strong>,</br> NVIDIA</a></p>
+											</div>
+											<div class="col-2">
+												<span class="image fit"><img src="images/Organizers/Alexandre_Alahi.jpg" alt="" /></span>
+												<p> <a href="https://people.epfl.ch/alexandre.alahi?lang=en"><strong>Alexandre
+															Alahi</strong>,</br> EPFL</a></p>
+											</div>
+											<div class="col-2">
+												<span class="image fit"><img src="images/Organizers/Jiachen_li.jpg" alt="" /></span>
+												<p> <a href="https://jiachenli94.github.io"><strong>Jiachen Li</strong>,</br> Stanford University</a></p>
+											</div>
+											<div class="col-2">
+												<span class="image fit"><img
+														src="images/Organizers/kai-oliver-arras-contact-4x3_res_540x405.jpg"
+														alt="" /></span>
+												<p> <a href="https://www.bosch.com/research/know-how/research-experts/dr-kai-oliver-arras/"><strong>Kai
+															O. Arras</strong>,</br> Robert Bosch GmbH</a></p>
+											</div>
+											<div class="col-2">
+												<span class="image fit"><img src="images/Organizers/achim_lilienthal.jpg" alt="" /></span>
+												<p> <a href="http://mro.oru.se/people/achim-lilienthal/"><strong>Achim J.
+															Lilienthal</strong>,</br> TU Munchen</a></p>
+											</div>
+										</div>
+									</div>
+							</section>
+
+						<!-- Four -->
+							<section id="four" class="wrapper style5">
 								<div class="inner">
 									<h2 class="major">In cooperation with</h2>
 
