--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 											<div class="col-2">
 												<span class="image fit"><img src="images/Organizers/achim_lilienthal.jpg" alt="" /></span>
 												<p> <a href="http://mro.oru.se/people/achim-lilienthal/"><strong>Achim J.
-															Lilienthal</strong>,</br> TU Munchen</a></p>
+															Lilienthal</strong>,</br> TU Munich</a></p>
 											</div>
 										</div>
 									</div>
