Updating the past events

--- a/past-events.html
+++ b/past-events.html
@@ -31,6 +31,7 @@
 							<h2>Menu</h2>
 							<ul class="links">
 								<li><a href="index.html">Home</a></li>
+								<li><a href="call-for-papers.html">Call for papers</a></li>
 								<li><a href="past-events.html">Past events</a></li>
 							</ul>
 							<a href="#" class="close">Close</a>
@@ -56,7 +57,7 @@
 									<a href="https://motionpredictionicra2020.github.io">LHMP 2020</a>,  
 									<a href="https://motionpredictionicra2021.github.io">LHMP 2021</a> and 
 									<a href="https://motionpredictionicra2022.github.io">LHMP 2022</a>.</p>
-									<p>Also check out the <a href="https://youtube.com/playlist?list=PLrLNIllEiqRBCF1Y5_La1juITYn_POa-p"><span class="redText">LHMP YouTube channel</span></a> with the talks recordings.</p>
+									<p>Also check out the <a href="https://www.youtube.com/@motionprediction8071"><span class="redText">LHMP YouTube channel</span></a> with the talks recordings.</p>
 							</div>
 						</header>
 					</section>
