Updating the index

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 							<h2>Menu</h2>
 							<ul class="links">
 								<li><a href="index.html">Home</a></li>
+								<li><a href="call-for-papers.html">Call for papers</a></li>
 								<li><a href="past-events.html">Past events</a></li>
 							</ul>
 							<a href="#" class="close">Close</a>
@@ -44,7 +45,7 @@
 							<h2>5th Workshop on </br>
 								Long-term Human Motion Prediction</h2>
 							<p>2023 IEEE International Conference on Robotics and Automation (<a href="https://www.icra2023.org">ICRA 2023</a>) </br>
-							29 May – 2 June 2023, London, UK</p>
+							29 May 2023, London, UK</p>
 						</div>
 					</section>
 
@@ -109,7 +110,7 @@
 								<article>
 									<h3 class="major">Call for papers</h3>
 									<p>We encourage researchers submit their novel material in short (up to 4 pages) papers to be presented as posters.</p>
-									<a href="#" class="special">Learn more</a>
+									<a href="call-for-papers.html" class="special">Learn more</a>
 								</article>
 								<article>
 									<h3 class="major">Prediction challenge</h3>
@@ -119,7 +120,7 @@
 								<article>
 									<h3 class="major">YouTube channel</h3>
 									<p>Recordings of the past LHMP events are available at our YouTube channel.</p>
-									<a href="#" class="special">Learn more</a>
+									<a href="https://www.youtube.com/@motionprediction8071" class="special">Learn more</a>
 								</article>
 							</section>
 							<ul class="actions">
