--- a/index.html
+++ b/index.html
@@ -189,6 +189,8 @@
 														alt="" /></span></div>
 											<div class="col-2"><span class="image fit"><img style="border-radius:2px"
 														src="images/Affiliations/Oru_logo.png" alt="" /></span></div>
+											<div class="col-2"><span class="image fit"><img style="border-radius:2px"
+												src="images/Affiliations/university-of-stuttgart-logo-white.png" alt="" /></span></div>
 											<div class="col-2"><span class="image fit"><img style="border-radius:2px" src="images/Affiliations/epfl-logo.png"
 														alt="" /></span></div>
 											<div class="col-2"><span class="image fit"><img style="border-radius:2px"
