--- a/call-for-papers.html
+++ b/call-for-papers.html
@@ -68,28 +68,39 @@
 										</div>
 
 										<div class="col-6 col-12-medium">
-									<strong>Topics of Interest</strong>
-									
-									<ul>
-										<li>Topics of interest for this workshop include, but are not limited to:</li>				
-										<li>Motion trajectory prediction in 2D and 3D</li>
-										<li>Predicting articulated human motion</li>
-										<li>Early action and activity recognition</li>
-										<li>Motion and Task Planning in dynamic environments considering motion predictions</li>
-										<li>Uncertainties related to prediction inputs/outputs and their propagation</li>
-										<li>Anticipation of group and crowd motion</li>
-										<li>Human motion prediction and safety</li>
-										<li>Human-robot Interaction considering predictions</li>
-										<li>Evaluation of prediction algorithms: datasets, metrics and benchmarks</li>
-										<li>Predictive planning and control</li>
-										<li>Applications of motion prediction techniques</li>
-										<li>Visual scene prediction</li>
-									</ul>
+											<strong>Topics of Interest</strong>
+											<ul>
+												<li>Topics of interest for this workshop include, but are not limited to:</li>				
+												<li>Motion trajectory prediction in 2D and 3D</li>
+												<li>Predicting articulated human motion</li>
+												<li>Early action and activity recognition</li>
+												<li>Motion and Task Planning in dynamic environments considering motion predictions</li>
+												<li>Uncertainties related to prediction inputs/outputs and their propagation</li>
+												<li>Anticipation of group and crowd motion</li>
+												<li>Human motion prediction and safety</li>
+												<li>Human-robot Interaction considering predictions</li>
+												<li>Evaluation of prediction algorithms: datasets, metrics and benchmarks</li>
+												<li>Predictive planning and control</li>
+												<li>Applications of motion prediction techniques</li>
+												<li>Visual scene prediction</li>
+											</ul>
 										</div>
-									</div>								
-							</div>
-						</header>
-					</section>
+									</div>
+									<h3 class="major">Program committee</h3>
+									<div class="row">
+										<div class="col-6 col-12-medium">
+											<ul>
+												<li><strong>Tim Schreiter</strong>, University of Örebro</li>
+												<li><strong>Nishant Rai</strong>, Stanford</li>
+												<li><strong>Yufei Zhu</strong>, University of Örebro</li>
+											</ul>
+										</div>
+										<div class="col-6 col-12-medium">
+										</div>
+									</div>
+						</div>
+					</div>
+
 
 				<!-- Footer -->
 				<section id="footer">
