--- a/call-for-papers.html
+++ b/call-for-papers.html
@@ -90,12 +90,18 @@
 									<div class="row">
 										<div class="col-6 col-12-medium">
 											<ul>
+												<li><strong>Andrey Rudenko</strong>, Bosch</li>
 												<li><strong>Tim Schreiter</strong>, University of Örebro</li>
 												<li><strong>Nishant Rai</strong>, Stanford</li>
 												<li><strong>Yufei Zhu</strong>, University of Örebro</li>
 											</ul>
 										</div>
 										<div class="col-6 col-12-medium">
+											<ul>
+												<li><strong>Luigi Palmieri</strong>, Bosch</li>
+												<li><strong>Boris Ivanovic</strong>, Nvidia</li>
+												<li><strong>Jiachen Li</strong>, Stanford</li>
+											</ul>
 										</div>
 									</div>
 						</div>
