Update PC members

--- a/call-for-papers.html
+++ b/call-for-papers.html
@@ -93,6 +93,9 @@
 												<li><strong>Tim Schreiter</strong>, University of Örebro</li>
 												<li><strong>Nishant Rai</strong>, Stanford</li>
 												<li><strong>Yufei Zhu</strong>, University of Örebro</li>
+												<li><strong>Stefan Becker</strong>, Fraunhofer</li>
+												<li><strong>Ronny Hug</strong>, Fraunhofer</li>
+												<li><strong>Junyi Shi</strong>, Aalto University</li>
 											</ul>
 										</div>
 										<div class="col-6 col-12-medium">
@@ -100,6 +103,10 @@
 												<li><strong>Luigi Palmieri</strong>, Bosch</li>
 												<li><strong>Boris Ivanovic</strong>, Nvidia</li>
 												<li><strong>Jiachen Li</strong>, Stanford</li>
+												<li><strong>Sariah Mghames</strong>, University of Lincoln</li>
+												<li><strong>Luca Castri</strong>, University of Lincoln</li>
+												<li><strong>Yuchen Liu</strong>, Bosch</li>
+												<li><strong>Faris Janjos</strong>, Bosch</li>
 											</ul>
 										</div>
 									</div>
