--- a/call-for-papers.html
+++ b/call-for-papers.html
@@ -108,6 +108,7 @@
 												<li><strong>Luca Castri</strong>, University of Lincoln</li>
 												<li><strong>Yuchen Liu</strong>, Bosch</li>
 												<li><strong>Faris Janjos</strong>, Bosch</li>
+												<li><strong>Lukas Heuer</strong>, Bosch</li>
 											</ul>
 										</div>
 									</div>
