--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 							<h2>Menu</h2>
 							<ul class="links">
 								<li><a href="index.html">Home</a></li>
+								<li><a href="program.html">Program</a></li>
 								<li><a href="call-for-papers.html">Call for papers</a></li>
 								<li><a href="past-events.html">Past events</a></li>
 							</ul>
