--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 								<article>
 									<h3 class="major">Program and participation</h3>
 									<p>Preliminary program of the full-day workshop is available. Registration and online participation details will be announced soon.</p>
-									<a href="#" class="special">Learn more</a>
+									<a href="program.html" class="special">Learn more</a>
 								</article>
 								<article>
 									<h3 class="major">Call for papers</h3>
@@ -191,6 +191,8 @@
 														alt="" /></span></div>
 											<div class="col-2"><span class="image fit"><img style="border-radius:2px"
 														src="images/Affiliations/Oru_logo.png" alt="" /></span></div>
+											<div class="col-2"><span class="image fit"><img style="border-radius:2px"
+												src="images/Affiliations/university-of-stuttgart-logo-white.png" alt="" /></span></div>
 											<div class="col-2"><span class="image fit"><img style="border-radius:2px" src="images/Affiliations/epfl-logo.png"
 														alt="" /></span></div>
 											<div class="col-2"><span class="image fit"><img style="border-radius:2px"
