--- a/call-for-papers.html
+++ b/call-for-papers.html
@@ -98,6 +98,7 @@
 												<li><strong>Ronny Hug</strong>, Fraunhofer</li>
 												<li><strong>Junyi Shi</strong>, Aalto University</li>
 												<li><strong>Andrea Bajcsy</strong>, UC Berkeley</li>
+												<li><strong>Tiago Almeida</strong>, University of Örebro</li>
 											</ul>
 										</div>
 										<div class="col-6 col-12-medium">
