Updating the PC list

--- a/call-for-papers.html
+++ b/call-for-papers.html
@@ -90,7 +90,6 @@
 									<div class="row">
 										<div class="col-6 col-12-medium">
 											<ul>
-												<li><strong>Andrey Rudenko</strong>, Bosch</li>
 												<li><strong>Tim Schreiter</strong>, University of Örebro</li>
 												<li><strong>Nishant Rai</strong>, Stanford</li>
 												<li><strong>Yufei Zhu</strong>, University of Örebro</li>
@@ -98,19 +97,17 @@
 												<li><strong>Ronny Hug</strong>, Fraunhofer</li>
 												<li><strong>Junyi Shi</strong>, Aalto University</li>
 												<li><strong>Andrea Bajcsy</strong>, UC Berkeley</li>
-												<li><strong>Tiago Almeida</strong>, University of Örebro</li>
 											</ul>
 										</div>
 										<div class="col-6 col-12-medium">
 											<ul>
-												<li><strong>Luigi Palmieri</strong>, Bosch</li>
-												<li><strong>Boris Ivanovic</strong>, Nvidia</li>
-												<li><strong>Jiachen Li</strong>, Stanford</li>
 												<li><strong>Sariah Mghames</strong>, University of Lincoln</li>
 												<li><strong>Luca Castri</strong>, University of Lincoln</li>
 												<li><strong>Yuchen Liu</strong>, Bosch</li>
 												<li><strong>Faris Janjos</strong>, Bosch</li>
 												<li><strong>Lukas Heuer</strong>, Bosch</li>
+												<li><strong>Nemanja Djuric</strong>, Aurora</li>
+												<li><strong>Tiago Almeida</strong>, University of Örebro</li>
 											</ul>
 										</div>
 									</div>
