--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 								Long-term Human Motion Prediction</h2>
 							<p>2023 IEEE International Conference on Robotics and Automation (<a href="https://www.icra2023.org">ICRA 2023</a>) </br>
 							29 May 2023, London, UK</p>
-							<p><strong>Call for papers! See details below.</strong></p>
+							<p><strong>Call for papers is still open! See details below.</strong></p>
 						</div>
 					</section>
 
