--- a/call-for-papers.html
+++ b/call-for-papers.html
@@ -60,7 +60,7 @@
 										<div class="col-6 col-12-medium">
 											<strong>Dates</strong>
 											<ul>
-												<li>Submission Deadline: April 16, 2023</li>	
+												<li>Submission Deadline: <s>April 16</s> <strong>April 30</strong>, 2023</li>	
 												<li>Author Notification: May 16, 2023</li>	
 												<li>Workshop: May 29, 2023</li>	
 											</ul>
