Adding the updated program

--- a/index.html
+++ b/index.html
@@ -47,7 +47,6 @@
 								Long-term Human Motion Prediction</h2>
 							<p>2023 IEEE International Conference on Robotics and Automation (<a href="https://www.icra2023.org">ICRA 2023</a>) </br>
 							29 May 2023, London, UK</p>
-							<p><strong>Call for papers is still open! See details below.</strong></p>
 						</div>
 					</section>
 
@@ -102,22 +101,22 @@
 					<section id="four" class="wrapper style3">
 						<div class="inner">
 							<h2 class="major">Highlights</h2>
-							<p> This workshop features the talks of 8 high-profile invited speakers of diverse academic and industrial backgrounds, a call for short papers and a trajectory prediction challenge.</p>
+							<p>This workshop features the talks of several high-profile invited speakers of diverse academic and industrial backgrounds, spotlight talks for selected conference papers, and a poster session featuring workshop proceedings.		</p>							
 							<section class="features">
 								<article>
-									<h3 class="major">Program and participation</h3>
-									<p>Preliminary program of the full-day workshop is available. Registration and online participation details will be announced soon.</p>
+									<h3 class="major">Program</h3>
+									<p>Preliminary program of the full-day workshop is available.</p>
 									<a href="program.html" class="special">Learn more</a>
+								</article>
+								<article>
+									<h3 class="major">Participation</h3>
+									<p>Registration and online participation details will be announced soon.</p>
+									<a href="#" class="special">Learn more</a>
 								</article>
 								<article>
 									<h3 class="major">Call for papers</h3>
 									<p>We encourage researchers submit their novel material in short (up to 4 pages) papers to be presented as posters.</p>
 									<a href="call-for-papers.html" class="special">Learn more</a>
-								</article>
-								<article>
-									<h3 class="major">Prediction challenge</h3>
-									<p>The challnge details will be announced soon.</p>
-									<a href="#" class="special">Learn more</a>
 								</article>
 								<article>
 									<h3 class="major">YouTube channel</h3>
@@ -169,7 +168,7 @@
 														src="images/Organizers/kai-oliver-arras-contact-4x3_res_540x405.jpg"
 														alt="" /></span>
 												<p> <a href="https://www.bosch.com/research/know-how/research-experts/dr-kai-oliver-arras/"><strong>Kai
-															O. Arras</strong>,</br> Robert Bosch GmbH</a></p>
+															O. Arras</strong>,</br> University of Stuttgart</a></p>
 											</div>
 											<div class="col-2">
 												<span class="image fit"><img src="images/Organizers/achim_lilienthal.jpg" alt="" /></span>
