--- a/program.html
+++ b/program.html
@@ -51,9 +51,7 @@
 					<!-- Content -->
 					<div class="wrapper">
 						<div class="inner">
-								<p>
-									This workshop features the talks of 8 high-profile invited speakers of diverse academic and industrial backgrounds, a call for short papers and a trajectory prediction challenge.
-									
+								<p>This workshop features the talks of several high-profile invited speakers of diverse academic and industrial backgrounds, spotlight talks for selected conference papers, and a poster session featuring workshop proceedings.		</p>							
 									<div class="table-wrapper">
 										<table>
 											<thead>
@@ -71,53 +69,59 @@
 												</tr>
 												<tr onClick='toggleRow(this)'>
 													<td>9:15 - 9:45 BST</td>
-													<td><strong><a href="http://www.alonsomora.com/">Javier Alonso-Mora</a></strong>, TU Delft</td>
+													<td><strong><a href="http://www.lambertoballan.net/">Lamberto Ballan</a></strong>, University of Padova</td>
 													<td>Title</td>
 													<td class='expanded-row-content hide-row'>Abstract: tbd</td>
 												</tr>
 												<tr onClick='toggleRow(this)'>
 													<td>9:45 - 10:15 BST</td>
-													<td><strong><a href="https://uk.linkedin.com/in/anthony-knittel-30b180204">Anthony Knittel</a></strong>, Five AI</td>
+													<td><strong><a href="http://www.alonsomora.com/">Javier Alonso-Mora, Gang Chen</a></strong>, TU Delft</td>
 													<td>Title</td>
 													<td class='expanded-row-content hide-row'>Abstract: tbd</td>
 												</tr>
 												<tr onClick='toggleRow(this)'>
 													<td>10:15 - 10:30 BST</td>
-													<td>Coffee break</td>
-													<td></td>
-												</tr>
-												<tr onClick='toggleRow(this)'>
-													<td>10:30 - 11:00 BST</td>
-													<td><strong><a href="https://gchal.github.io/">Georgia Chalvatzaki</a></strong>, TU Darmstadt</td>
+													<td><strong><a href="https://scholar.google.com/citations?user=fYCdRUwAAAAJ&hl=en">Tim Schreiter</a></strong>, University of Örebro</td>
 													<td>Title</td>
 													<td class='expanded-row-content hide-row'>Abstract: tbd</td>
 												</tr>
 												<tr onClick='toggleRow(this)'>
+													<td>10:30 - 10:45 BST</td>
+													<td><strong><a href="https://www.linkedin.com/in/faris-janjos/?originalSubdomain=de">Faris Janjos</a></strong>, Bosch</td>
+													<td>Title</td>
+													<td class='expanded-row-content hide-row'>Abstract: tbd</td>
+												</tr>
+												<tr onClick='toggleRow(this)'>
+													<td>10:30 - 10:45 BST</td>
+													<td>Coffee break</td>
+													<td></td>
+												</tr>
+												<tr onClick='toggleRow(this)'>
 													<td>11:00 - 11:30 BST</td>
-													<td><strong><a href="">tbd</a></strong></td>
+													<td><strong><a href="https://www.santannapisa.it/en/egidio-falotico">Egidio Falotico</a></strong>, Sant'Anna School of Advanced Studies</td>
 													<td>Title</td>
 													<td class='expanded-row-content hide-row'>Abstract: tbd</td>
 												</tr>
 												<tr onClick='toggleRow(this)'>
 													<td>11:30 - 12:00 BST</td>
+													<td><strong><a href="https://gchal.github.io/">Georgia Chalvatzaki</a></strong>, TU Darmstadt</td>
+													<td>Title</td>
+													<td class='expanded-row-content hide-row'>Abstract: tbd</td>
+												</tr>
+												<tr onClick='toggleRow(this)'>
+													<td>12:00 - 12:30 BST</td>
 													<td>Spotlight talks</td>
 													<td></td>
 												</tr>
 												<tr onClick='toggleRow(this)'>
-													<td>12:00 - 13:00 BST</td>
+													<td>12:30 - 13:30 BST</td>
 													<td>Lunch break</td>
 													<td></td>
 												</tr>
 												<tr onClick='toggleRow(this)'>
-													<td>13:00 - 14:00 BST</td>
+													<td>13:30 - 14:30 BST</td>
 													<td>Poster session</td>
 													<td></td>
-												</tr>
-												<tr onClick='toggleRow(this)'>
-													<td>14:00 - 14:30 BST</td>
-													<td><strong><a href="https://www.autonomousagents.stanford.edu/">Nick Haber</a></strong>, Stanford</td>
-													<td>Title</td>
-													<td class='expanded-row-content hide-row'>Abstract: tbd</td>
 												</tr>
 												<tr onClick='toggleRow(this)'>
 													<td>14:30 - 15:00 BST</td>
@@ -126,34 +130,30 @@
 													<td class='expanded-row-content hide-row'>Abstract: tbd</td>
 												</tr>
 												<tr onClick='toggleRow(this)'>
-													<td>15:00 - 15:15 BST</td>
+													<td>15:00 - 15:30 BST</td>
+													<td><strong><a href="https://www.autonomousagents.stanford.edu/">Nick Haber</a></strong>, Stanford</td>
+													<td>Title</td>
+													<td class='expanded-row-content hide-row'>Abstract: tbd</td>
+												</tr>
+												<tr onClick='toggleRow(this)'>
+													<td>15:30 - 15:45 BST</td>
 													<td>Coffee break</td>
 													<td></td>
 												</tr>
-												<tr>
-													<td>15:15 - 15:30 BST</td>
-													<td>THÖR Human Motion Dataset update</td>
-													<td></td>
-												</tr>
 												<tr onClick='toggleRow(this)'>
-													<td>15:30 - 16:00 BST</td>
-													<td>TrajNet++ Trajectory Prediction Challenge</td>
-													<td></td>
-												</tr>
-												<tr onClick='toggleRow(this)'>
-													<td>16:00 - 16:30 BST</td>
-													<td><strong><a href="http://www.lambertoballan.net/">Lamberto Ballan</a></strong>, University of Padova</td>
+													<td>15:45 - 16:15 BST</td>
+													<td><strong><a href="https://uk.linkedin.com/in/anthony-knittel-30b180204">Anthony Knittel</a></strong>, Five AI</td>
 													<td>Title</td>
 													<td class='expanded-row-content hide-row'>Abstract: tbd</td>
 												</tr>
 												<tr onClick='toggleRow(this)'>
-													<td>16:30 - 17:00 BST</td>
-													<td><strong><a href="">tbd</a></strong></td>
+													<td>16:15 - 16:45 BST</td>
+													<td><strong><a href="https://research.nvidia.com/person/yuxiao-chen">Yuxiao Chen</a></strong>, NVIDIA</td>
 													<td>Title</td>
 													<td class='expanded-row-content hide-row'>Abstract: tbd</td>
 												</tr>
 												<tr>
-													<td>17:00 - 17:15 BST</td>
+													<td>16:45 - 17:00 BST</td>
 													<td>Organizers</td>
 													<td>Discussion and conclusions</td>
 												</tr>
