Adding the updated program

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
 							<section>
 								<h2 class="major">Get in touch</h2>
 								<p>Please feel free to send us an <a href="mailto:Andrey.Rudenko@de.bosch.com?Subject=Workshop%20LHMP"
-									target="_top">e-mail</a> , if you have any questions regarding this workshop.</p>
+									target="_top">e-mail</a> , if you have a question regarding this workshop.</p>
 							</section>
 
 							<ul class="copyright">
