--- a/call-for-papers.html
+++ b/call-for-papers.html
@@ -97,10 +97,12 @@
 												<li><strong>Ronny Hug</strong>, Fraunhofer</li>
 												<li><strong>Junyi Shi</strong>, Aalto University</li>
 												<li><strong>Andrea Bajcsy</strong>, UC Berkeley</li>
+												<li><strong>Francesco Del Duchetto</strong>, University of Lincoln</li>
 											</ul>
 										</div>
 										<div class="col-6 col-12-medium">
 											<ul>
+												<li><strong>Luigi Palmieri</strong>, Bosch</li>
 												<li><strong>Sariah Mghames</strong>, University of Lincoln</li>
 												<li><strong>Luca Castri</strong>, University of Lincoln</li>
 												<li><strong>Yuchen Liu</strong>, Bosch</li>
@@ -113,6 +115,65 @@
 									</div>
 						</div>
 					</div>
+
+				<!-- Four -->
+				<section id="four" class="wrapper alt style2">
+					<div class="inner">
+						<h2 class="major">Workshop proceedings</h2>
+						<div class="table-wrapper-2">
+							<table>
+								<thead>
+									<tr>
+										<th>Authors</th>
+										<th>Title</th>
+									</tr>
+								</thead>
+								<tbody>
+									<tr>
+										<td>Nils Mandischer (RWTH Aachen University); Frederik Schicks (RWTH Aachen University); Burkhard Corves (IGMR, RWTH Aachen University)</td>
+										<td>Situational Adaptive Motion Prediction for Firefighting Squads in Indoor Search and Rescue</td>
+									</tr>
+									<tr>
+										<td>Anna Mészáros (Delft University of Technology); Javier Alonso-Mora (Delft University of Technology); Jens Kober (TU Delft)</td>
+										<td>TrajFlow: Learning the Distribution over Trajectories</td>
+									</tr>
+									<tr>
+										<td>Mincheul Kim (Korea Advanced Institute of Science and Technology (KAIST)); Youngsun Kwon (Electronics and Telecommunications Research Institute (ETRI)); Sebin Lee (KAIST); Sungeui Yoon (KAIST)</td>
+										<td>A Combined Approach to Mobile Robot Navigation Using CCTV</td>
+									</tr>
+									<tr>
+										<td>Oliver Urbann (Fraunhofer IML); Oliver Bredtmann (DB Schenker); Maximilian Otten (Fraunhofer IML); Jan-Philip Richter (Fraunhofer IML); Thilo Bauer (DB Schenker); David Zibriczky (DB Schenker)</td>
+										<td>Online and Real-Time Tracking in a Surveillance Scenario</td>
+									</tr>
+									<tr>
+										<td>Tim Salzmann (Technical University of Munich); Lewis Chiang; Markus Ryll (Technical University of Munich); Dorsa Sadigh (Stanford); Carolina Parada (Google); Alex Bewley (Google)</td>
+										<td>Human Scene Transformer</td>
+									</tr>
+									<tr>
+										<td>Divya Thuremella (University of Oxford); Lars Kunze (University of Oxford)</td>
+										<td>Long-Tailed Trajectory Prediction</td>
+									</tr>
+									<tr>
+										<td>Sander Tonkens (University of California San Diego); Sophia H Sun (University of California, San Diego); Rose Yu (University of California, San Diego); Sylvia Herbert (University of California San Diego)</td>
+										<td>Scalable Safe Long-Horizon Planning in Dynamic Environments Leveraging Conformal Prediction and Temporal Correlations </td>
+									</tr>
+									<tr>
+										<td>Tomas Vintr (Faculty of Electrical Engineering, Czech Technical University in Prague)</td>
+										<td>Dataset Collection for Long-term Forecasting of Human Presence, Motion and Activity</td>
+									</tr>
+									<tr>
+										<td>Anthony Knittel (FiveAI); Morris Antonello (FiveAI); John Redford (Five AI Ltd.); Subramanian Ramamoorthy (FiveAI Ltd.)</td>
+										<td>Comparison of Pedestrian Prediction Models from Trajectory and Appearance Data for Autonomous Driving</td>
+									</tr>
+									<tr>
+										<td>Yufei Zhu (Örebro University); Andrey Rudenko (Bosch Corporate Research); Tomasz Piotr Kucner (Aalto University); Achim Lilienthal (Orebro University); Martin Magnusson (Orebro University)</td>
+										<td>A Data-Efficient Approach for Long-Term Human Motion Prediction Using Maps of Dynamics</td>
+									</tr>
+								</tbody>
+							</table>
+						</div>
+					</div>
+				</section>
 
 
 				<!-- Footer -->
