--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 					<section id="four" class="wrapper style3">
 						<div class="inner">
 							<h2 class="major">Highlights</h2>
-							<p>This workshop features the talks of several high-profile invited speakers of diverse academic and industrial backgrounds, spotlight talks for selected conference papers, and a poster session featuring workshop proceedings.		</p>							
+							<p>This workshop features the talks of several high-profile invited speakers of diverse academic and industrial backgrounds and a poster session featuring workshop proceedings.		</p>							
 							<section class="features">
 								<article>
 									<h3 class="major">Program</h3>
